<resources>
    <string name="app_name">Room Database</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add">add</string>
    <string name="btn_add">Add</string>
    <string name="hint_edt_age">Age</string>
    <string name="hint_edt_lastname">Last Name</string>
    <string name="hint_edt_firstname">First Name</string>
    <string name="btn_save">Save</string>
    <string name="menu_delete">Delete</string>
</resources>